--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+</head>
+<body>
+ 
 <?php
 
 if(strpos($_SERVER['HTTP_USER_AGENT'], 'curl') !== FALSE)
@@ -27,3 +33,6 @@ if(strpos($_SERVER['HTTP_USER_AGENT'], 'curl') !== FALSE)
 else
    include 'desktop_main.php';
 ?>
+
+</body>
+</html>
